--- a/src/components/style.css
+++ b/src/components/style.css
@@ -6,7 +6,6 @@
 .sidebar {
     background: url(../img/library-bg.png);
     width: 20%;
-    height: 100vh;
     display: flex;
 }
 
@@ -30,7 +29,7 @@
 .icon-img {
     padding: 5px;
 }
-.icon-img > img {
+img {
     width: 50px;
     height: 50px;
     cursor: pointer; 
